# docs/swagger.json
@@ -8,6 +8,29 @@
     },
     "basePath": "/realtime-chat/api/v1",
     "paths": {
+        "/": {
+            "get": {
+                "description": "Health check API",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Health check API",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HealthCheckResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorMessage"
+                        }
+                    }
+                }
+            }
+        },
         "/chat-rooms": {
             "get": {
                 "description": "Get chat room by id",
@@ -123,40 +146,6 @@
                         "name": "roomid",
                         "in": "path",
                         "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "$ref": "#/definitions/dto.SuccessMessage"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorMessage"
-                        }
-                    }
-                }
-            }
-        },
-        "/messages": {
-            "post": {
-                "description": "Create new message and saves in mongo db",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Create new message API",
-                "parameters": [
-                    {
-                        "description": "Request body has message details",
-                        "name": "Message",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Message"
-                        }
                     }
                 ],
                 "responses": {
@@ -291,6 +280,47 @@
                     }
                 }
             }
+        },
+        "/ws/chat-room/{room_id}": {
+            "get": {
+                "description": "Websocket handler api to initiate websockets",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Websocket handler API",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "room id",
+                        "name": "roomid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Request body user id and message body",
+                        "name": "User",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.Message"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/dto.SuccessMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorMessage"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -301,6 +331,25 @@
                     "type": "string"
                 },
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.HealthCheckResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.Message": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
@@ -366,23 +415,6 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.Message": {
-            "type": "object",
-            "properties": {
-                "_id": {
-                    "type": "string"
-                },
-                "body": {
-                    "type": "string"
-                },
-                "chatroom_id": {
-                    "type": "string"
-                },
-                "user_id": {
                     "type": "string"
                 }
             }
