# src/controller/dto/real-time-chat-dto.go
@@ -1,5 +1,10 @@
 package dto
 
+// SuccessMessage dto
+type HealthCheckResponse struct {
+	Message string `json:"message"`
+}
+
 // ErrorMessage dto
 type ErrorMessage struct {
 	Message     string `json:"message"`
@@ -27,4 +32,10 @@ type RequestUserUpdate struct {
 	LastName    string      `json:"lastname" binding:"required"`
 	OldPassword string      `json:"oldpassword" binding:"required"`
 	NewPassword string      `json:"newpassword" binding:"required"`
+}
+
+// Message dto
+type Message struct {
+	UserID     string `json:"user_id,omitempty" bson:"user_id,omitempty"`
+	Body       string `json:"body,omitempty" bson:"body,omitempty"`
 }
